# TCP-transport

./: .directory  .gitignore  CMakeLists.txt  main.cpp  platformdet.h
Logger/: Logger.cpp  Logger.h  Utilities.h
tcpclient/: client.h  main.cpp
tcpserver/: main.cpp  server.h
tcpsocket/: Address.cpp  Address.h  TCPSocket.cpp  TCPSocket.h  link_platform_h_socket.h
